--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "postcss css/tailwind.css -o build/index.css"
+    "build": "postcss css/tailwind.css -o build/index.css",
+    "watch": "postcss css/tailwind.css -o build/index.css --watch"
   },
   "repository": {
     "type": "git",
