Add cssnano to minify css

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "autoprefixer": "^9.8.0",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
